# sui-vanity-tools

./: Cargo.toml
src/: main.rs
